--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://eloquent-yalow-356e80.netlify.com/"
+baseurl = "https://hardcore-pike-c7af58.netlify.com/"
 languageCode = "en-us"
 title = "Digital Safety"
 editor = "gedit"
